rtl and change design

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -25,6 +25,9 @@
   input:focus ~ label {
     @apply left-0;
   }
+  html{
+    direction: rtl;
+  }
 
   input:-webkit-autofill,
   input:-webkit-autofill:hover,
